@startuml
'stateless namespace EtAlii.Generators.Stateless.Tests
'stateless class MyFancyStateMachineBase
'stateless generate partial
'stateless using System.Text

[*] -> State1 << (string name) >> : Start
State1 : this is a string
State1 : this is another string
State1 -> State2 : Continue
State2 -down-> [*] : Exit
State2 -> State2 << (string name) >> : Check
State2 -up-> State3 : Continue
State3 -up-> State4 << async >> : Continue
@enduml
